Allow styling of outlines in CSS

--- a/TreeMenu.css
+++ b/TreeMenu.css
@@ -1,6 +1,6 @@
 .tree-menu {margin:0; padding:0; position:absolute; left:0; top:100px; width:200px; height:400px; overflow:auto; border:1px solid; cursor:default;}
 	.tree-menu ul {margin:0; padding:0;}
-	.tree-menu li {margin:0; padding:0; padding-left:19px;}
+	.tree-menu li {margin:0; padding:0; padding-left:19px; line-height:16px;}
 		.tree-menu li.tree-menu-node-branch {list-style-image:url(assets/icon-16x16.png); } /*has submenu*/
 		.tree-menu li.tree-menu-node-leaf {} /*no submenu*/
 	.tree-menu li img {margin-right:3px; vertical-align:bottom;}
@@ -10,3 +10,5 @@
 .tree-menu-collapser {width:10px; height:10px; overflow:hidden; text-indent:12px; background:url(assets/minus.gif) no-repeat;}
 .tree-menu-collapser.collapsed {background-image:url(assets/plus.gif)}
 
+.tree-menu-outline-horizontal {border-top:1px dotted #666;}
+.tree-menu-outline-vertical {border-left:1px dotted #666;}
