--- a/TreeMenu.css
+++ b/TreeMenu.css
@@ -8,9 +8,9 @@
 	.tree-menu :link, .tree-menu :visited {text-decoration:none; color:inherit;}
 	.tree-menu :link:hover, .tree-menu :visited:hover {text-decoration:underline;}
 
-.tree-menu-collapser {position:absolute; top:4px; left:2px; width:10px; height:10px; overflow:hidden; text-indent:12px; margin-left:-19px; background:url(assets/minus.gif) no-repeat;}
-.tree-menu-collapser.collapsed {background-image:url(assets/plus.gif)}
-
-.tree-menu-outline-horizontal {position:absolute; top:8px; left:8px; width:8px; border-top:1px dotted #666; margin-left:-19px;}
-.tree-menu-outline-vertical {position:absolute; top:0; left:6px; height:100%; line-height:0; border-left:1px dotted #666; margin-left:-19px;}
+.tree-menu-outline-horizontal {position:absolute; top:8px; left:8px; z-index:1; width:8px; border-top:1px dotted #666; margin-left:-19px;}
+.tree-menu-outline-vertical {position:absolute; top:0; left:6px; z-index:1; height:100%; line-height:0; border-left:1px dotted #666; margin-left:-19px;}
 	.tree-menu-outline-vertical.last-child-outline {height:8px;}
+
+.tree-menu-collapser {position:absolute; top:4px; left:2px; z-index:2; width:10px; height:10px; overflow:hidden; text-indent:12px; margin-left:-19px; background:url(assets/minus.gif) no-repeat;}
+.tree-menu-collapser.collapsed {background-image:url(assets/plus.gif)}
