--- a/RoundedCorners.css
+++ b/RoundedCorners.css
@@ -1,5 +1,12 @@
-.rounded-corner {width:12px; height:12px; z-index:0;}
-.top-left     {margin:-1px 0 0 -1px; background:url(assets/corner-tl.gif);}
-.top-right    {margin:-1px -1px 0 0; background:url(assets/corner-tr.gif);}
-.bottom-left  {margin:0 0 -1px -1px; background:url(assets/corner-bl.gif);}
-.bottom-right {margin:0 -1px -1px 0; background:url(assets/corner-br.gif);}
+/*.rounded-corner {width:18px; height:18px; z-index:0; border:1px solid red;}
+.top-left     {margin:-1px 0 0 -1px; background:url(assets/corner-tl.gif) no-repeat top left;}
+.top-right    {margin:-1px -1px 0 0; background:url(assets/corner-tr.gif) no-repeat top right;}
+.bottom-left  {margin:0 0 -1px -1px; background:url(assets/corner-bl.gif) no-repeat bottom left;}
+.bottom-right {margin:0 -1px -1px 0; background:url(assets/corner-br.gif) no-repeat bottom right;}
+*/
+
+.rounded-corner {}
+.top-left     {background:url(assets/corner-tl.gif) no-repeat top left;}
+.top-right    {background:url(assets/corner-tr.gif) no-repeat top right; margin-right:-1px;}
+.bottom-left  {background:url(assets/corner-bl.gif) no-repeat bottom left; margin-bottom:-1px;}
+.bottom-right {background:url(assets/corner-br.gif) no-repeat bottom right;}
